# leptos-demo-showcase

./: .gitignore  Cargo.toml  README.md
.github/workflows/: gh_page.yml  rust.yml
app/: Cargo.toml  Trunk.toml
app/src/: lib.rs  main.rs
showcase/leptos-fetch/: Cargo.toml  README.md
showcase/leptos-fetch/src/: lib.rs
showcase/transition-let/: Cargo.toml  README.md
showcase/transition-let/src/: lib.rs  mini_let.rs  transition_let.rs
